posiGen_FullsendBox/src/objects/Intacct_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Entity__c</fullName>
        <label>Parent Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Providence__c</fullName>
        <label>State/Providence</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Intacct Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intacct Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>